--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
+
+  <!-- body -->
+
   <body>
     <div class="wrapper">
+
+      <!-- card header -->
+
       <header>
         <h1>Password Generator</h1>
       </header>
@@ -16,7 +22,13 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+
+        <!-- card body -->
+
         <div class="card-body">
+
+          <!-- text area -->
+
           <textarea
             readonly
             id="password"
@@ -24,6 +36,9 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+
+        <!-- card footer -->
+
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
